# gcash-nlp-dashboard

./: README.md  app.py  environment.yml  main.py  pyproject.toml
data/: GCASH_REVIEW_SAMPLED.csv  gcash_reviews_enriched.csv
notebooks/: 01_eda.ipynb
pages/: 1_EDA.py  2_Sentiment.py  3_Topics.py  4_Clustering.py  5_Business_Insights.py  6_Ask_AI.py
utils/: data_loader.py
